src/test/ui/const-generics/issues/issue-64494.min.stderr
error: generic parameters must not be used inside of non trivial constant values
  --> $DIR/issue-64494.rs:16:38
   |
LL | impl<T: Foo> MyTrait for T where Is<{T::VAL == 5}>: True {}
   |                                      ^^^^^^ non-trivial anonymous constants must not depend on the parameter `T`
   |
   = note: type parameters are currently not permitted in anonymous constants

error: generic parameters must not be used inside of non trivial constant values
  --> $DIR/issue-64494.rs:19:38
   |
LL | impl<T: Foo> MyTrait for T where Is<{T::VAL == 6}>: True {}
   |                                      ^^^^^^ non-trivial anonymous constants must not depend on the parameter `T`
   |
   = note: type parameters are currently not permitted in anonymous constants

error[E0119]: conflicting implementations of trait `MyTrait`:
  --> $DIR/issue-64494.rs:19:1
   |
LL | impl<T: Foo> MyTrait for T where Is<{T::VAL == 5}>: True {}
   | ------------------------------------ first implementation here
...
LL | impl<T: Foo> MyTrait for T where Is<{T::VAL == 6}>: True {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0119`.
